# RanamiWallpapers

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  README.md  main.cpp
DComp/: DComp.cpp  DComp.h
DX/: DXDevice.cpp  DXDevice.h
DXVA/: DXVA.cpp  DXVA.h
FFmpeg/: DecoderLoop.inl  FFmpeg.cpp  FFmpeg.h  FramePool.cpp  FrameQueue.cpp
Parse/: Parse.cpp  Parse.h
PostMessageW/: PostMessageW.cpp  PostMessageW.h
Render/: Render.cpp  Render.h  Render.inl
SwapChin/: SwapChain.cpp  SwapChain.h
Window/: Window.cpp  Window.h  Window.inl  WorkerW.cpp  WorkerW.h
core/: Engine.cpp  Engine.h
docs/: engine_message_list.md  gui-wallpaper-library.md  how_to_use_engine_message.md  rust-side-overview.md
installer/: Product.wxs  license.rtf
rust/: Cargo.toml
rust/alive-wallpaper-tray/: Cargo.toml
rust/alive-wallpaper-tray/src/: main.rs
rust/ranami-wallpapers/: Cargo.toml  build.rs
rust/ranami-wallpapers-gui/: Cargo.toml  build.rs
rust/ranami-wallpapers-gui/src/: file_saver.rs  main.rs  namepipe.rs  thumbnail_cache.rs
rust/ranami-wallpapers-gui/ui/: main-window.slint  sidebar.slint  wallpaper-card.slint
rust/ranami-wallpapers-tray/: Cargo.toml
rust/ranami-wallpapers-tray/src/: main.rs
rust/ranami-wallpapers/src/: arg.rs  client_init.rs  client_loop.rs  engine.rs  init_gui.rs  init_tray.rs  main.rs  main_loop.rs  namepipe.rs  set_wallpaper_on_wndow.rs  startup_file_check.rs  window.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/wallpaper-engine-client/: Cargo.toml
rust/wallpaper-engine-client/src/: arg.rs  client_init.rs  client_loop.rs  engine.rs  init_console.rs  init_gui.rs  init_tray.rs  main.rs  main_loop.rs  namepipe.rs  window.rs
rust/wallpaper-engine-gui/: Cargo.toml  Save-Wallpapers.json  Saved-Wallpaper-Path.txt  build.rs
rust/wallpaper-engine-gui/src/: file_saver.rs  init_file_picker.rs  init_s_file_picker.rs  main.rs  namepipe.rs  thumbnail_cache.rs
rust/wallpaper-engine-gui/ui/: main-window.slint  sidebar-button.slint  sidebar.slint  wallpaper-card.slint
rust/wllpaper-engine-client/: Cargo.toml
rust/wllpaper-engine-client/src/: client_init.rs  engine.rs  main.rs  windows.rs
