[package]
name = "alive-wallpaper-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = "0.35.3"

shared =  {path = "../shared"}

tray-icon = "0.24.1"

windows = {version = "0.62.2", features =[
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
]}

