[package]
name = "ranami-wallpapers-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

shared = {path = "../shared"}
slint = "1.17.0"
tokio = {version = "1.52.3", features = ["full"]}

[build-dependencies]

slint-build = "1.17.0"
shared = {path = "../shared"}
