[package]
name = "ranami-wallpapers"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.150"

shared = {path = "../shared"}
tokio = {version = "1.52.3", features = ["full"]}
windows = {version = "0.62.2", features =[
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
]}
windows-result = "0.4.1"

[build-dependencies]
winres = "0.1.12"
